--- a/style.css
+++ b/style.css
@@ -1,9 +1,19 @@
+body {
+    background-color: teal;
+    cursor: url('img/arrow.svg'), auto;
+    margin: 0;
+    padding: 10px;
+    height: 100vh;
+    width: 100vw;
+}
+
 .window {
     width: 100%;
     height: 100%;
     max-width: 800px;
     height: 500px;
     position: absolute;
+    cursor: url('img/pointer.svg'), auto;
 }
 
 media-controller {
@@ -12,7 +22,7 @@ media-controller {
 }
 
 media-time-range {
-    --media-range-bar-color	: navy;
+    --media-range-bar-color: linear-gradient(90deg, navy 16px, transparent 0 2px) repeat 0 0 / 18px 100%;
     --media-range-track-height: 32px;
     --media-range-padding: 4px;
     --media-range-thumb-opacity: 0;
